Add style guide
Shadow layout.js in the style guide to add some spacing to the guide.
Add top margins to headers.
Add cname to build-gatsby.yml to point routedapp.org at the site.

--- a/.github/workflows/build-gatsby.yml
+++ b/.github/workflows/build-gatsby.yml
@@ -56,3 +56,4 @@ jobs:
           publish_dir: ./public
           # don't keep a history of all the commits to the gh_pages branch
           force_orphan: true
+          cname: routedapp.org
