--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@contentful/rich-text-types": "^15.12.1",
     "@fontsource/public-sans": "^4.5.8",
+    "@lekoarts/gatsby-theme-styleguide": "^3.0.1",
     "@mdx-js/mdx": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
     "@theme-ui/presets": "^0.14.5",
