--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "gatsby-plugin-image": "^2.14.1",
     "gatsby-plugin-mdx": "^3.14.0",
     "gatsby-plugin-react-helmet": "^5.14.0",
+    "gatsby-plugin-react-svg": "^3.1.0",
     "gatsby-plugin-styled-components": "^5.14.0",
     "gatsby-plugin-theme-ui": "^0.14.5",
     "gatsby-source-contentful": "^7.12.0",
