--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "routed-website",
   "version": "0.0.1",
   "private": true,
-  "description": "Website for the RoutED app.",
-  "author": "Team RoutED",
+  "description": "Website for the Routed app.",
+  "author": "Team Routed",
   "keywords": [],
   "scripts": {
     "develop": "gatsby develop",
@@ -16,16 +16,12 @@
     "@contentful/rich-text-types": "^15.13.2",
     "@fontsource/public-sans": "^4.5.10",
     "@lekoarts/gatsby-theme-styleguide": "^3.0.1",
-    "@mdx-js/mdx": "^1.6.22",
-    "@mdx-js/react": "^1.6.22",
     "@theme-ui/presets": "^0.14.7",
     "babel-plugin-styled-components": "^2.0.7",
     "dotenv": "^16.0.2",
     "gatsby": "^4.23.1",
     "gatsby-plugin-alias-imports": "^1.0.5",
     "gatsby-plugin-image": "^2.23.1",
-    "gatsby-plugin-mdx": "^3.20.0",
-    "gatsby-plugin-react-helmet": "^5.23.0",
     "gatsby-plugin-react-svg": "^3.1.0",
     "gatsby-plugin-styled-components": "^5.23.0",
     "gatsby-plugin-theme-ui": "^0.14.7",
