--- a/.github/workflows/build-gatsby.yml
+++ b/.github/workflows/build-gatsby.yml
@@ -40,7 +40,9 @@ jobs:
           key: ${{ runner.os }}-build-cache
 
       - name: Install Packages
-        run: npm ci --ignore-scripts --prefer-offline --no-audit
+        # use --force, because theme-ui uses @mdx-js v1, which hasn't been
+        # updated for React 18 yet
+        run: npm ci --ignore-scripts --prefer-offline --no-audit --force
 
       - name: Build Gatsby
         env:
