--- a/.github/workflows/build-gatsby.yml
+++ b/.github/workflows/build-gatsby.yml
@@ -43,8 +43,9 @@ jobs:
       - name: Install Packages
         # use --force, because theme-ui uses @mdx-js v1, which hasn't been
         # updated for React 18 yet
-        run: yarn
+#        run: yarn
 #        run: npm ci --ignore-scripts --prefer-offline --no-audit --force
+        run: npm i --ignore-scripts --prefer-offline --no-audit --force
 
       - name: Build Gatsby
         env:
