--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "gatsby-plugin-theme-ui": "^0.14.7",
     "gatsby-source-contentful": "^7.21.1",
     "gatsby-source-filesystem": "^4.23.0",
+    "gatsby-transformer-sharp": "^4.23.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
