--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "@contentful/rich-text-types": "^15.13.2",
     "@fontsource/public-sans": "^4.5.10",
     "@lekoarts/gatsby-theme-styleguide": "^3.0.1",
-    "@theme-ui/presets": "^0.14.7",
+    "@mdx-js/react": "^1",
+    "@theme-ui/presets": "^0.15.1",
     "babel-plugin-styled-components": "^2.0.7",
     "dotenv": "^16.0.2",
     "gatsby": "^4.23.1",
@@ -24,7 +25,7 @@
     "gatsby-plugin-image": "^2.23.1",
     "gatsby-plugin-react-svg": "^3.1.0",
     "gatsby-plugin-styled-components": "^5.23.0",
-    "gatsby-plugin-theme-ui": "^0.14.7",
+    "gatsby-plugin-theme-ui": "^0.15.1",
     "gatsby-source-contentful": "^7.21.1",
     "gatsby-source-filesystem": "^4.23.0",
     "gatsby-transformer-sharp": "^4.23.1",
@@ -32,6 +33,6 @@
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "styled-components": "^5.3.5",
-    "theme-ui": "^0.14.7"
+    "theme-ui": "^0.15.1"
   }
 }
