Fix nav menu scrolling
Prevent page from scrolling behind it by adding a class to the html element.
Remove sticky state from header, since the page can't scroll at all.
Add match-media package so Header can track the current breakpoint.  Force install, since the theme-ui package is still on 14.7.

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@contentful/rich-text-types": "^15.13.2",
     "@fontsource/public-sans": "^4.5.10",
     "@lekoarts/gatsby-theme-styleguide": "^3.0.1",
+    "@theme-ui/match-media": "^0.15.1",
     "@theme-ui/presets": "^0.14.7",
     "babel-plugin-styled-components": "^2.0.7",
     "dotenv": "^16.0.2",
