fixed type in netlify.toml

--- a/netlify.toml
+++ b/netlify.toml
@@ -2,4 +2,4 @@
   environment = { NODE_VERSION = "18.0" }
 
 [context.deploy-preview]
-  environment = { NODE_VERSION = "18.0" 
+  environment = { NODE_VERSION = "18.0" }
